--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Android Chat App</title>
+<title>Chatify</title>
 <style>
 body {
   margin: 0;
@@ -210,8 +210,8 @@ footer button {
 
 <div id="chatApp">
   <header>
-    <span>Chat App</span>
-    <button onclick="logout()" style="background:none;border:none;color:white;cursor:pointer;">Sign out</button>
+    <span>Chatify</span>
+    <button onclick="logout()" style="background:none;border:none;color:red;cursor:pointer;">Sign out</button>
   </header>
   <div id="loading"><div class="loader"></div></div>
   <div id="chat"></div>
