--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ body {
   height: 100vh;
 }
 
+/* PIN overlay */
 #pinOverlay {
   position: fixed;
   inset: 0;
@@ -24,7 +25,6 @@ body {
   background: rgba(0,0,0,0.4);
   z-index: 100;
 }
-
 #pinBox {
   background: white;
   padding: 30px;
@@ -34,14 +34,12 @@ body {
   gap: 15px;
   width: 300px;
 }
-
 #pinBox input {
   padding: 12px;
   border-radius: 12px;
   border: 1px solid #ccc;
   font-size: 16px;
 }
-
 #pinBox button {
   background: #4caf50;
   color: white;
@@ -52,6 +50,7 @@ body {
   font-weight: bold;
 }
 
+/* Chat App */
 #chatApp {
   display: none;
   flex-direction: column;
@@ -63,7 +62,6 @@ body {
   box-shadow: 0 8px 30px rgba(0,0,0,0.2);
   overflow: hidden;
 }
-
 header {
   background: #4caf50;
   color: white;
@@ -74,7 +72,6 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-
 #chat {
   flex: 1;
   overflow-y: auto;
@@ -84,7 +81,6 @@ header {
   gap: 12px;
   background: #fafafa;
 }
-
 .message {
   max-width: 70%;
   padding: 12px 15px;
@@ -94,107 +90,65 @@ header {
   word-wrap: break-word;
   animation: slideUp 0.25s ease;
 }
-
-.myMessage {
-  align-self: flex-end;
-  background: #4caf50;
-  color: white;
-  border-bottom-right-radius: 4px;
-}
-
-.otherMessage {
-  align-self: flex-start;
-  background: #e0e0e0;
-  color: black;
-  border-bottom-left-radius: 4px;
-}
-
-.options {
-  position: absolute;
-  top: 6px;
-  right: 8px;
-  cursor: pointer;
-  font-size: 14px;
-  color: rgba(255,255,255,0.7);
-}
-
+.myMessage { align-self:flex-end; background:#4caf50; color:white; border-bottom-right-radius:4px; }
+.otherMessage { align-self:flex-start; background:#e0e0e0; color:black; border-bottom-left-radius:4px; }
+.options { position:absolute; top:6px; right:8px; cursor:pointer; font-size:14px; color:rgba(255,255,255,0.7); }
 .options-menu {
-  position: absolute;
-  top: 22px;
-  right: 8px;
-  background: #fff;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  display: none;
-  z-index: 10;
+  position:absolute; top:22px; right:8px; background:#fff; border:1px solid #ccc; border-radius:8px;
+  display:none; z-index:10;
 }
-
 .options-menu button {
-  background: none;
-  border: none;
-  width: 100%;
-  padding: 6px 12px;
-  text-align: left;
-  cursor: pointer;
+  background:none; border:none; width:100%; padding:6px 12px; text-align:left; cursor:pointer;
 }
-
-.options-menu button:hover { background: #f0f0f0; }
+.options-menu button:hover { background:#f0f0f0; }
 
 footer {
-  display: flex;
-  padding: 12px;
-  background: #fff;
-  border-top: 1px solid #ddd;
+  display:flex;
+  padding:12px;
+  background:#fff;
+  border-top:1px solid #ddd;
 }
-
 footer input {
-  flex: 1;
-  padding: 12px;
-  border-radius: 24px;
-  border: 1px solid #ccc;
-  margin-right: 10px;
-  outline: none;
-  font-size: 15px;
+  flex:1;
+  padding:12px;
+  border-radius:24px;
+  border:1px solid #ccc;
+  margin-right:10px;
+  outline:none;
+  font-size:15px;
 }
-
 footer button {
-  background: #4caf50;
-  border: none;
-  border-radius: 50%;
-  width: 48px;
-  height: 48px;
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background:#4caf50;
+  border:none;
+  border-radius:50%;
+  width:48px;
+  height:48px;
+  color:white;
+  font-size:20px;
+  cursor:pointer;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
-@keyframes slideUp {
-  from {opacity:0; transform: translateY(10px);}
-  to {opacity:1; transform: translateY(0);}
-}
+@keyframes slideUp { from {opacity:0; transform: translateY(10px);} to {opacity:1; transform: translateY(0);} }
 
 /* Loading circle */
 #loading {
-  display: none;
-  justify-content: center;
-  align-items: center;
-  height: 100px;
+  display:none;
+  justify-content:center;
+  align-items:center;
+  height:100px;
 }
 .loader {
-  border: 6px solid #f3f3f3;
-  border-top: 6px solid #4caf50;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  border:6px solid #f3f3f3;
+  border-top:6px solid #4caf50;
+  border-radius:50%;
+  width:40px;
+  height:40px;
   animation: spin 1s linear infinite;
 }
-@keyframes spin {
-  0% { transform: rotate(0deg);}
-  100% { transform: rotate(360deg);}
-}
+@keyframes spin { 0% { transform: rotate(0deg);} 100% { transform: rotate(360deg);} }
 </style>
 </head>
 <body>
@@ -222,7 +176,6 @@ footer button {
 </div>
 
 <audio id="newMessageSound" src="https://www.soundjay.com/button/sounds/button-3.mp3" preload="auto"></audio>
-
 <script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
 <script>
 const PIN_CODE = "5432";
@@ -241,15 +194,13 @@ const newMessageSound = document.getElementById('newMessageSound');
 const loadingDiv = document.getElementById('loading');
 
 let currentUser = null;
-let messages = [];
+let displayedMessages = new Set();
 
 // Remember user
 if(localStorage.getItem("chatUser")){
   currentUser = JSON.parse(localStorage.getItem("chatUser"));
   pinOverlay.style.display = "none";
   chatApp.style.display = "flex";
-  messages = JSON.parse(localStorage.getItem("chatMessages") || "[]");
-  messages.forEach(displayMessage);
   loadHistory();
 }
 
@@ -257,21 +208,17 @@ if(localStorage.getItem("chatUser")){
 pinBtn.addEventListener('click', ()=>{
   const username = usernameInput.value.trim();
   const pin = pinInput.value.trim();
-  if(!username) return;
-  if(pin !== PIN_CODE) return;
+  if(!username || pin!==PIN_CODE) return;
   currentUser = {username};
   localStorage.setItem("chatUser", JSON.stringify(currentUser));
   pinOverlay.style.display="none";
   chatApp.style.display="flex";
-  messages = JSON.parse(localStorage.getItem("chatMessages") || "[]");
-  messages.forEach(displayMessage);
   loadHistory();
 });
 
-// Display message
-function displayMessage({username, message, id, deleted}, live=false){
-  const div = document.querySelector(`[data-id="${id}"]`);
-  if(deleted && div){ div.innerHTML="<em>Message deleted</em>"; return; }
+function displayMessage({username,message,id,deleted}, live=false){
+  if(displayedMessages.has(id)) return;
+  displayedMessages.add(id);
 
   const msgEl = document.createElement('div');
   msgEl.className = "message " + (username===currentUser.username ? "myMessage":"otherMessage");
@@ -288,23 +235,24 @@ function displayMessage({username, message, id, deleted}, live=false){
 
   if(username===currentUser.username){
     const options = document.createElement('div');
-    options.className = 'options';
-    options.textContent = '⋮';
-    const menu = document.createElement('div');
-    menu.className = 'options-menu';
-    const delBtn = document.createElement('button');
-    delBtn.textContent = "Delete";
-    delBtn.onclick = () => {
-      const msgObj = messages.find(m=>m.id===id);
-      if(msgObj){ msgObj.deleted=true; localStorage.setItem("chatMessages", JSON.stringify(messages)); }
-      channel.publish('message', JSON.stringify({id, deleted:true}));
+    options.className='options';
+    options.textContent='⋮';
+    const menu=document.createElement('div');
+    menu.className='options-menu';
+    const delBtn=document.createElement('button');
+    delBtn.textContent="Delete";
+    delBtn.onclick=()=>{
+      channel.publish('message', JSON.stringify({id,deleted:true}));
       menu.style.display="none";
-      displayMessage({id, deleted:true});
     };
     menu.appendChild(delBtn);
-    options.onclick = ()=>{menu.style.display = menu.style.display==='block'?"none":"block";};
+    options.onclick=()=>{menu.style.display=menu.style.display==='block'?"none":"block";};
     msgEl.appendChild(options);
     msgEl.appendChild(menu);
+  }
+
+  if(deleted){
+    msgEl.innerHTML="<em>Message deleted</em>";
   }
 
   chatDiv.appendChild(msgEl);
@@ -320,31 +268,20 @@ function displayMessage({username, message, id, deleted}, live=false){
   }
 }
 
-// Load history
 function loadHistory(){
-  loadingDiv.style.display = "flex";
-  channel.history({limit:200,direction:'forwards'}, (err, resultPage)=>{
-    loadingDiv.style.display = "none";
+  loadingDiv.style.display="flex";
+  channel.history({limit:200,direction:'forwards'}, (err,resultPage)=>{
+    loadingDiv.style.display="none";
     if(err) return console.error(err);
     resultPage.items.forEach(item=>{
-      const data = JSON.parse(item.data);
-      if(!messages.find(m=>m.id===data.id)){
-        messages.push(data);
-        localStorage.setItem("chatMessages", JSON.stringify(messages));
-        displayMessage(data, false);
-      }
+      displayMessage(JSON.parse(item.data), false);
     });
   });
 }
 
-// Subscribe live
+// Subscribe live messages
 channel.subscribe('message', msg=>{
-  const data = JSON.parse(msg.data);
-  if(!messages.find(m=>m.id===data.id)){
-    messages.push(data);
-    localStorage.setItem("chatMessages", JSON.stringify(messages));
-    displayMessage(data, true);
-  }
+  displayMessage(JSON.parse(msg.data), true);
 });
 
 // Send message
@@ -352,10 +289,7 @@ sendBtn.addEventListener('click', ()=>{
   const msg = messageInput.value.trim();
   if(!msg || !currentUser) return;
   const id = Date.now() + '-' + Math.random();
-  const data = {id, username: currentUser.username, message: msg};
-  messages.push(data);
-  localStorage.setItem("chatMessages", JSON.stringify(messages));
-  displayMessage(data, true);
+  const data = {id, username:currentUser.username, message:msg};
   channel.publish('message', JSON.stringify(data));
   messageInput.value='';
 });
