--- a/index.html
+++ b/index.html
@@ -5,14 +5,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chatify</title>
 <style>
+:root {
+  --background-color: #f5f5f5;
+  --text-color: #333333;
+  --card-background: #ffffff;
+  --button-background: #4caf50;
+  --button-text: #ffffff;
+  --secondary-background: #fafafa;
+  --border-color: #ccc;
+  --shadow-color: rgba(0,0,0,0.2);
+  --message-my-background: #4caf50;
+  --message-my-text: #ffffff;
+  --message-other-background: #e0e0e0;
+  --message-other-text: #000000;
+  --overlay-background: rgba(0,0,0,0.4);
+  --transition-time: 1.5s;
+}
+
+[data-theme="dark"] {
+  --background-color: #1a1a1a;
+  --text-color: #ffffff;
+  --card-background: #2c2c2c;
+  --button-background: #45a049;
+  --button-text: #ffffff;
+  --secondary-background: #333333;
+  --border-color: #555555;
+  --shadow-color: rgba(255,255,255,0.1);
+  --message-my-background: #45a049;
+  --message-my-text: #ffffff;
+  --message-other-background: #4a4a4a;
+  --message-other-text: #ffffff;
+  --overlay-background: rgba(255,255,255,0.2);
+}
+
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
-  background: #f5f5f5;
+  background: var(--background-color);
+  color: var(--text-color);
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  transition: background-color var(--transition-time) ease, color var(--transition-time) ease;
 }
 
 /* PIN overlay */
@@ -22,32 +57,39 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(0,0,0,0.4);
+  background: var(--overlay-background);
   z-index: 100;
+  transition: background-color var(--transition-time) ease;
 }
 #pinBox {
-  background: white;
+  background: var(--card-background);
   padding: 30px;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
   gap: 15px;
   width: 300px;
+  box-shadow: 0 8px 30px var(--shadow-color);
+  transition: background-color var(--transition-time) ease, box-shadow var(--transition-time) ease;
 }
 #pinBox input {
   padding: 12px;
   border-radius: 12px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
   font-size: 16px;
+  background: var(--card-background);
+  color: var(--text-color);
+  transition: border-color var(--transition-time) ease, background-color var(--transition-time) ease, color var(--transition-time) ease;
 }
 #pinBox button {
-  background: #4caf50;
-  color: white;
+  background: var(--button-background);
+  color: var(--button-text);
   border: none;
   padding: 12px;
   border-radius: 12px;
   cursor: pointer;
   font-weight: bold;
+  transition: background-color var(--transition-time) ease;
 }
 
 /* Chat App */
@@ -57,20 +99,22 @@ body {
   height: 90vh;
   width: 95%;
   max-width: 900px;
-  background: #fff;
+  background: var(--card-background);
   border-radius: 16px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+  box-shadow: 0 8px 30px var(--shadow-color);
   overflow: hidden;
+  transition: background-color var(--transition-time) ease, box-shadow var(--transition-time) ease;
 }
 header {
-  background: #4caf50;
-  color: white;
+  background: var(--button-background);
+  color: var(--button-text);
   padding: 15px;
   font-size: 18px;
   font-weight: bold;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: background-color var(--transition-time) ease, color var(--transition-time) ease;
 }
 #chat {
   flex: 1;
@@ -79,7 +123,8 @@ header {
   display: flex;
   flex-direction: column;
   gap: 12px;
-  background: #fafafa;
+  background: var(--secondary-background);
+  transition: background-color var(--transition-time) ease;
 }
 .message {
   max-width: 70%;
@@ -89,71 +134,117 @@ header {
   position: relative;
   word-wrap: break-word;
   animation: slideUp 0.25s ease;
+  transition: background-color var(--transition-time) ease, color var(--transition-time) ease;
 }
-.myMessage { align-self:flex-end; background:#4caf50; color:white; border-bottom-right-radius:4px; }
-.otherMessage { align-self:flex-start; background:#e0e0e0; color:black; border-bottom-left-radius:4px; }
-.options { position:absolute; top:6px; right:8px; cursor:pointer; font-size:14px; color:rgba(255,255,255,0.7); }
+.myMessage { 
+  align-self: flex-end; 
+  background: var(--message-my-background); 
+  color: var(--message-my-text); 
+  border-bottom-right-radius: 4px; 
+}
+.otherMessage { 
+  align-self: flex-start; 
+  background: var(--message-other-background); 
+  color: var(--message-other-text); 
+  border-bottom-left-radius: 4px; 
+}
+.options { 
+  position: absolute; 
+  top: 6px; 
+  right: 8px; 
+  cursor: pointer; 
+  font-size: 14px; 
+  color: rgba(255,255,255,0.7); 
+}
 .options-menu {
-  position:absolute; top:22px; right:8px; background:#fff; border:1px solid #ccc; border-radius:8px;
-  display:none; z-index:10;
+  position: absolute; 
+  top: 22px; 
+  right: 8px; 
+  background: var(--card-background); 
+  border: 1px solid var(--border-color); 
+  border-radius: 8px;
+  display: none; 
+  z-index: 10;
+  transition: background-color var(--transition-time) ease, border-color var(--transition-time) ease;
 }
 .options-menu button {
-  background:none; border:none; width:100%; padding:6px 12px; text-align:left; cursor:pointer;
+  background: none; 
+  border: none; 
+  width: 100%; 
+  padding: 6px 12px; 
+  text-align: left; 
+  cursor: pointer;
+  color: var(--text-color);
+  transition: background-color var(--transition-time) ease, color var(--transition-time) ease;
 }
-.options-menu button:hover { background:#f0f0f0; }
+.options-menu button:hover { 
+  background: var(--secondary-background); 
+}
 
 footer {
-  display:flex;
-  padding:12px;
-  background:#fff;
-  border-top:1px solid #ddd;
+  display: flex;
+  padding: 12px;
+  background: var(--card-background);
+  border-top: 1px solid var(--border-color);
+  transition: background-color var(--transition-time) ease, border-color var(--transition-time) ease;
 }
 footer input {
-  flex:1;
-  padding:12px;
-  border-radius:24px;
-  border:1px solid #ccc;
-  margin-right:10px;
-  outline:none;
-  font-size:15px;
+  flex: 1;
+  padding: 12px;
+  border-radius: 24px;
+  border: 1px solid var(--border-color);
+  margin-right: 10px;
+  outline: none;
+  font-size: 15px;
+  background: var(--card-background);
+  color: var(--text-color);
+  transition: border-color var(--transition-time) ease, background-color var(--transition-time) ease, color var(--transition-time) ease;
 }
 footer button {
-  background:#4caf50;
-  border:none;
-  border-radius:50%;
-  width:48px;
-  height:48px;
-  color:white;
-  font-size:20px;
-  cursor:pointer;
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  background: var(--button-background);
+  border: none;
+  border-radius: 50%;
+  width: 48px;
+  height: 48px;
+  color: var(--button-text);
+  font-size: 20px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color var(--transition-time) ease;
 }
 
-@keyframes slideUp { from {opacity:0; transform: translateY(10px);} to {opacity:1; transform: translateY(0);} }
+@keyframes slideUp { 
+  from { opacity: 0; transform: translateY(10px); } 
+  to { opacity: 1; transform: translateY(0); } 
+}
 
 /* Loading circle */
 #loading {
-  display:none;
-  justify-content:center;
-  align-items:center;
-  height:100px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
 }
 .loader {
-  border:6px solid #f3f3f3;
-  border-top:6px solid #4caf50;
-  border-radius:50%;
-  width:40px;
-  height:40px;
+  border: 6px solid var(--secondary-background);
+  border-top: 6px solid var(--button-background);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   animation: spin 1s linear infinite;
 }
-@keyframes spin { 0% { transform: rotate(0deg);} 100% { transform: rotate(360deg);} }
+@keyframes spin { 
+  0% { transform: rotate(0deg); } 
+  100% { transform: rotate(360deg); } 
+}
 
 .timestamp {
-  font-size:10px;
-  color:#666;
-  margin-top:2px;
+  font-size: 10px;
+  color: var(--border-color);
+  margin-top: 2px;
+  transition: color var(--transition-time) ease;
 }
 </style>
 </head>
@@ -171,6 +262,7 @@ footer button {
 <div id="chatApp">
   <header>
     <span>Chatify</span>
+    <button onclick="toggleTheme()" style="background:none;border:none;color:var(--button-text);cursor:pointer;">Toggle Theme</button>
     <button onclick="logout()" style="background:none;border:none;color:red;cursor:pointer;">Sign out</button>
   </header>
   <div id="loading"><div class="loader"></div></div>
@@ -346,6 +438,25 @@ function logout(){
   localStorage.removeItem("chatUser");
   location.reload();
 }
+
+function toggleTheme() {
+  const currentTheme = document.documentElement.getAttribute('data-theme') || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+  const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+  document.documentElement.setAttribute('data-theme', newTheme);
+  localStorage.setItem('theme', newTheme);
+}
+
+// Initialize theme based on saved preference or system preference
+const savedTheme = localStorage.getItem('theme');
+const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+document.documentElement.setAttribute('data-theme', savedTheme || (prefersDark ? 'dark' : 'light'));
+
+// Listen for system theme changes
+window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', (e) => {
+  if (!localStorage.getItem('theme')) {
+    document.documentElement.setAttribute('data-theme', e.matches ? 'dark' : 'light');
+  }
+});
 </script>
 </body>
 </html>
